[package]
name = "clock-in"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = { version = "0.12", default-features = false, features = [
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
rand = "0.8"
dotenvy = "0.15"